Završeni zadaci bez testova

--- a/MMS_LV02_Shannon_Fano_algoritam.ipynb
+++ b/MMS_LV02_Shannon_Fano_algoritam.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 36,
    "id": "distinct-accountability",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,9 @@
     "        simbol_p_kod.append((simboli[i], vjerovatnoce[i], kodovi[i]))\n",
     "    \n",
     "\n",
+    "    simbol_p_kod = sorted(simbol_p_kod, key=lambda x: x[0]) # po alfabetu\n",
     "    simbol_p_kod = sorted(simbol_p_kod, key=lambda x: x[1], reverse=True)\n",
+    "    print(simbol_p_kod)\n",
     "\n",
     "    dodaj_kodove(simbol_p_kod, 0, len(simbol_p_kod))\n",
     "\n",
@@ -147,39 +149,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
-   "id": "2235422f",
+   "execution_count": 37,
+   "id": "871da8c3",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Izvorna poruka je:\n",
-      "CAADADBAADCAADBAADAD\n",
-      "\n",
-      "Poruka se sastoji od sljedecih simbola:\n",
-      "A, D, B, C\n",
-      "\n",
-      "Skup dobivenih kodnih riječi je:\n",
-      "0, 10, 110, 111\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Testing grounds\n",
+    "def kodiraj(poruka, simboli, kodovi):\n",
+    "    kodirana = \"\"\n",
+    "    for simbol in poruka:\n",
+    "        kodirana+=kodovi[simboli.index(simbol)]\n",
+    "    return kodirana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "bd6db32b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def entropija(poruka):\n",
     "\n",
-    "poruka = \"CAADADBAADCAADBAADAD\"\n",
-    "print(\"Izvorna poruka je:\")\n",
-    "print(poruka)\n",
+    "    simboli = list(set(poruka))\n",
+    "    vjerovatnoce = [0]*len(simboli)\n",
+    "    for i in range(len(simboli)):\n",
+    "        for simbol in poruka:\n",
+    "            if simboli[i] == simbol:\n",
+    "                vjerovatnoce[i]+=1\n",
+    "        vjerovatnoce[i]/=len(poruka)\n",
+    "        \n",
+    "    rezultat = 0\n",
     "\n",
-    "(simboli, kodovi) = shannon_fano(poruka)\n",
+    "    for v in vjerovatnoce:\n",
+    "        rezultat += v * math.log(v,2)\n",
+    "    \n",
+    "    rezultat *= -1\n",
     "\n",
-    "print(\"\\nPoruka se sastoji od sljedecih simbola:\")\n",
-    "print(\", \".join(map(str, simboli))) \n",
-    "\n",
-    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
-    "print(\", \".join(map(str, kodovi))) "
+    "    return rezultat"
    ]
   },
   {
