Završeni tetovi i popravljen kod

--- a/MMS_LV02_Shannon_Fano_algoritam.ipynb
+++ b/MMS_LV02_Shannon_Fano_algoritam.ipynb
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 116,
    "id": "distinct-accountability",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,10 @@
     "        if start == end:\n",
     "            return\n",
     "        elif start == end - 1:\n",
-    "            simbol_p_kod[start] = (simbol_p_kod[start][0], simbol_p_kod[start][1], prefix)\n",
+    "            if len(simbol_p_kod) == 1: \n",
+    "                simbol_p_kod[start] = (simbol_p_kod[start][0], simbol_p_kod[start][1], '0')\n",
+    "            else:\n",
+    "                simbol_p_kod[start] = (simbol_p_kod[start][0], simbol_p_kod[start][1], prefix)\n",
     "        else:\n",
     "            ukupna_vjerovatnoca = sum(simbol[1] for simbol in simbol_p_kod[start:end])\n",
     "            kumulativna_vjerovatnoca = 0\n",
@@ -138,7 +141,6 @@
     "\n",
     "    simbol_p_kod = sorted(simbol_p_kod, key=lambda x: x[0]) # po alfabetu\n",
     "    simbol_p_kod = sorted(simbol_p_kod, key=lambda x: x[1], reverse=True)\n",
-    "    print(simbol_p_kod)\n",
     "\n",
     "    dodaj_kodove(simbol_p_kod, 0, len(simbol_p_kod))\n",
     "\n",
@@ -149,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 117,
    "id": "871da8c3",
    "metadata": {},
    "outputs": [],
@@ -163,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 118,
    "id": "bd6db32b",
    "metadata": {},
    "outputs": [],
@@ -186,7 +188,7 @@
     "    \n",
     "    rezultat *= -1\n",
     "\n",
-    "    return rezultat"
+    "    return abs(rezultat)"
    ]
   },
   {
@@ -199,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 119,
    "id": "wireless-cooper",
    "metadata": {},
    "outputs": [
@@ -211,27 +213,27 @@
       "CAADADBAADCAADBAADAD\n",
       "\n",
       "Poruka se sastoji od sljedecih simbola:\n",
-      "A, D, B, C\n",
+      "A, B, C, D\n",
       "\n",
       "Skup dobivenih kodnih riječi je:\n",
       "0, 10, 110, 111\n",
       "\n",
       "Kod simbola A je 0\n",
       "\n",
-      "Kod simbola D je 10\n",
+      "Kod simbola B je 10\n",
       "\n",
-      "Kod simbola B je 110\n",
+      "Kod simbola C je 110\n",
       "\n",
-      "Kod simbola C je 111\n",
+      "Kod simbola D je 111\n",
       "\n",
       "Kodirana poruka je:\n",
-      "1110010010110001011100101100010010\n",
+      "11000111011110001111100011110001110111\n",
       "\n",
       "Entropija poruke je:\n",
       "1.685\n",
       "\n",
       "Prosječna dužina kodne riječi u poruci je:\n",
-      "1.7\n"
+      "1.9\n"
      ]
     }
    ],
@@ -260,6 +262,263 @@
     "print(round(entropija(poruka),3))\n",
     "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
     "print(round(len(kodirana)/len(poruka),3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "fdf53561",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "A\n",
+      "\n",
+      "Poruka se sastoji od sljedecih simbola:\n",
+      "A\n",
+      "\n",
+      "Skup dobivenih kodnih riječi je:\n",
+      "0\n",
+      "\n",
+      "Kod simbola A je 0\n",
+      "\n",
+      "Kodirana poruka je:\n",
+      "0\n",
+      "\n",
+      "Entropija poruke je:\n",
+      "0.0\n",
+      "\n",
+      "Prosječna dužina kodne riječi u poruci je:\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 1\n",
+    "import math\n",
+    "poruka = \"A\"\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi) = shannon_fano(poruka)\n",
+    "\n",
+    "print(\"\\nPoruka se sastoji od sljedecih simbola:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "kodirana = kodiraj(poruka, simboli, kodovi)\n",
+    "\n",
+    "for i in range(len(simboli)):\n",
+    "  print(\"\\nKod simbola \" + simboli[i] + \" je \" + kodovi [i])\n",
+    "\n",
+    "print(\"\\nKodirana poruka je:\")\n",
+    "print(kodirana)\n",
+    "print(\"\\nEntropija poruke je:\")\n",
+    "print(round(entropija(poruka),3))\n",
+    "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
+    "print(round(len(kodirana)/len(poruka),3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "633c2fae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "DDDDDDDDDDDDDDDDDD\n",
+      "\n",
+      "Poruka se sastoji od sljedecih simbola:\n",
+      "D\n",
+      "\n",
+      "Skup dobivenih kodnih riječi je:\n",
+      "0\n",
+      "\n",
+      "Kod simbola D je 0\n",
+      "\n",
+      "Kodirana poruka je:\n",
+      "000000000000000000\n",
+      "\n",
+      "Entropija poruke je:\n",
+      "0.0\n",
+      "\n",
+      "Prosječna dužina kodne riječi u poruci je:\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 2\n",
+    "\n",
+    "import math\n",
+    "poruka = \"DDDDDDDDDDDDDDDDDD\"\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi) = shannon_fano(poruka)\n",
+    "\n",
+    "print(\"\\nPoruka se sastoji od sljedecih simbola:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "kodirana = kodiraj(poruka, simboli, kodovi)\n",
+    "\n",
+    "for i in range(len(simboli)):\n",
+    "  print(\"\\nKod simbola \" + simboli[i] + \" je \" + kodovi [i])\n",
+    "\n",
+    "print(\"\\nKodirana poruka je:\")\n",
+    "print(kodirana)\n",
+    "print(\"\\nEntropija poruke je:\")\n",
+    "print(round(entropija(poruka),3))\n",
+    "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
+    "print(round(len(kodirana)/len(poruka),3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "1c616df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "ABBBBCDECCCCAAAAAAAAAAAAAA\n",
+      "\n",
+      "Poruka se sastoji od sljedecih simbola:\n",
+      "A, B, C, D, E\n",
+      "\n",
+      "Skup dobivenih kodnih riječi je:\n",
+      "0, 10, 110, 1110, 1111\n",
+      "\n",
+      "Kod simbola A je 0\n",
+      "\n",
+      "Kod simbola B je 10\n",
+      "\n",
+      "Kod simbola C je 110\n",
+      "\n",
+      "Kod simbola D je 1110\n",
+      "\n",
+      "Kod simbola E je 1111\n",
+      "\n",
+      "Kodirana poruka je:\n",
+      "0101010101101110111111011011011000000000000000\n",
+      "\n",
+      "Entropija poruke je:\n",
+      "1.692\n",
+      "\n",
+      "Prosječna dužina kodne riječi u poruci je:\n",
+      "1.769\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 3\n",
+    "\n",
+    "import math\n",
+    "poruka = \"ABBBBCDECCCCAAAAAAAAAAAAAA\"\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi) = shannon_fano(poruka)\n",
+    "\n",
+    "print(\"\\nPoruka se sastoji od sljedecih simbola:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "kodirana = kodiraj(poruka, simboli, kodovi)\n",
+    "\n",
+    "for i in range(len(simboli)):\n",
+    "  print(\"\\nKod simbola \" + simboli[i] + \" je \" + kodovi [i])\n",
+    "\n",
+    "print(\"\\nKodirana poruka je:\")\n",
+    "print(kodirana)\n",
+    "print(\"\\nEntropija poruke je:\")\n",
+    "print(round(entropija(poruka),3))\n",
+    "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
+    "print(round(len(kodirana)/len(poruka),3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "3dce77e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "AAAAAAAAAABBBBBBCCCD\n",
+      "\n",
+      "Poruka se sastoji od sljedecih simbola:\n",
+      "A, B, C, D\n",
+      "\n",
+      "Skup dobivenih kodnih riječi je:\n",
+      "0, 10, 110, 111\n",
+      "\n",
+      "Kod simbola A je 0\n",
+      "\n",
+      "Kod simbola B je 10\n",
+      "\n",
+      "Kod simbola C je 110\n",
+      "\n",
+      "Kod simbola D je 111\n",
+      "\n",
+      "Kodirana poruka je:\n",
+      "0000000000101010101010110110110111\n",
+      "\n",
+      "Entropija poruke je:\n",
+      "1.648\n",
+      "\n",
+      "Prosječna dužina kodne riječi u poruci je:\n",
+      "1.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 4\n",
+    "\n",
+    "import math\n",
+    "poruka = \"AAAAAAAAAABBBBBBCCCD\"\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi) = shannon_fano(poruka)\n",
+    "\n",
+    "print(\"\\nPoruka se sastoji od sljedecih simbola:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "kodirana = kodiraj(poruka, simboli, kodovi)\n",
+    "\n",
+    "for i in range(len(simboli)):\n",
+    "  print(\"\\nKod simbola \" + simboli[i] + \" je \" + kodovi [i])\n",
+    "\n",
+    "print(\"\\nKodirana poruka je:\")\n",
+    "print(kodirana)\n",
+    "print(\"\\nEntropija poruke je:\")\n",
+    "print(round(entropija(poruka),3))\n",
+    "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
+    "print(round(len(kodirana)/len(poruka),3))\n"
    ]
   }
  ],
