Nadamo se da huffman radi, idem spavati

--- a/MMS_LV03_Huffmanov_algoritam_kodiranja.ipynb
+++ b/MMS_LV03_Huffmanov_algoritam_kodiranja.ipynb
@@ -94,11 +94,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 44,
    "id": "subjective-medium",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def huffman(poruka):\n",
+    "\n",
+    "    simboli = list(set(poruka))\n",
+    "    vjerovatnoce = [0]*len(simboli)\n",
+    "    kodovi = ['']*len(simboli)\n",
+    "\n",
+    "    for i in range(len(simboli)):\n",
+    "        for simbol in poruka:\n",
+    "            if simboli[i] == simbol:\n",
+    "                vjerovatnoce[i]+=1\n",
+    "        vjerovatnoce[i]/=len(poruka)\n",
+    "    \n",
+    "    simbol_p_kod = []\n",
+    "    for i in range(len(simboli)):\n",
+    "        simbol_p_kod.append(([(simboli[i], kodovi[i])], vjerovatnoce[i]))\n",
+    "    \n",
+    "\n",
+    "    simbol_p_kod = sorted(simbol_p_kod, key=lambda x: x[0]) # po alfabetu radi testova\n",
+    "\n",
+    "    while len(simbol_p_kod) != 1:\n",
+    "        #sortiranje po vjerovatnocama\n",
+    "        simbol_p_kod = sorted(simbol_p_kod, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "        #zadnje dvije liste sa najmanjim vjerovatnocama\n",
+    "        predzadnji = simbol_p_kod[len(simbol_p_kod) - 2]\n",
+    "        zadnji = simbol_p_kod[len(simbol_p_kod) - 1]\n",
+    "\n",
+    "        #dodavanje na nule i jedinice na kodove simbola\n",
+    "        modified_predzadnji = [(kod[0], '0' + kod[1]) for kod in predzadnji[0]]\n",
+    "        predzadnji = (modified_predzadnji, predzadnji[1])\n",
+    "\n",
+    "        modified_zadnji = [(kod[0], '1' + kod[1]) for kod in zadnji[0]]\n",
+    "        zadnji = (modified_zadnji, zadnji[1])\n",
+    "\n",
+    "\n",
+    "        #spajanje zadnje i predzadnje podliste i racunanje njihove ukupne vjerovatnoce\n",
+    "        spojen_zadnji_predzadnji = (predzadnji[0] + zadnji[0], predzadnji[1] + zadnji[1])\n",
+    "\n",
+    "        #brisanje zadnjeg i predzadnjeg i dodavanje novog skupa smbola, ovo bi bilo ono podstablo\n",
+    "        del simbol_p_kod[len(simbol_p_kod) - 1]\n",
+    "        del simbol_p_kod[len(simbol_p_kod) - 1]\n",
+    "        simbol_p_kod.append(spojen_zadnji_predzadnji)\n",
+    "\n",
+    "    print(simbol_p_kod)\n",
+    "    \n",
+    "    return [], []\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a9520a72",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "BBBAAAAAAAABBCDAAA\n",
+      "[([('A', '0'), ('B', '10'), ('C', '110'), ('D', '111')], 1.0)]\n",
+      "\n",
+      "Poruka se sastoji od sljedećih simbola:\n",
+      "\n",
+      "\n",
+      "Skup dobivenih kodnih riječi je:\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#testing grounds\n",
+    "import math\n",
+    "poruka = \"BBBAAAAAAAABBCDAAA\"\n",
+    "\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi) = huffman(poruka)\n",
+    "\n",
+    "print(\"\\nPoruka se sastoji od sljedećih simbola:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
+    "print(\", \".join(map(str, kodovi))) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "82d0962f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def kodiraj(poruka, simboli, kodovi):\n",
+    "    kodirana = \"\"\n",
+    "    for simbol in poruka:\n",
+    "        kodirana+=kodovi[simboli.index(simbol)]\n",
+    "    return kodirana"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e623fe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "def entropija(poruka):\n",
+    "\n",
+    "    simboli = list(set(poruka))\n",
+    "    vjerovatnoce = [0]*len(simboli)\n",
+    "    for i in range(len(simboli)):\n",
+    "        for simbol in poruka:\n",
+    "            if simboli[i] == simbol:\n",
+    "                vjerovatnoce[i]+=1\n",
+    "        vjerovatnoce[i]/=len(poruka)\n",
+    "        \n",
+    "    rezultat = 0\n",
+    "\n",
+    "    for v in vjerovatnoce:\n",
+    "        rezultat += v * math.log(v,2)\n",
+    "    \n",
+    "    rezultat *= -1\n",
+    "\n",
+    "    return abs(rezultat)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -191,7 +319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
