--- a/MMS_LV03_Huffmanov_algoritam_kodiranja.ipynb
+++ b/MMS_LV03_Huffmanov_algoritam_kodiranja.ipynb
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "id": "subjective-medium",
    "metadata": {},
    "outputs": [],
@@ -111,20 +111,23 @@
     "                vjerovatnoce[i]+=1\n",
     "        vjerovatnoce[i]/=len(poruka)\n",
     "    \n",
-    "    simbol_p_kod = []\n",
+    "    simbol_kod_p = []\n",
     "    for i in range(len(simboli)):\n",
-    "        simbol_p_kod.append(([(simboli[i], kodovi[i])], vjerovatnoce[i]))\n",
+    "        simbol_kod_p.append(([(simboli[i], kodovi[i])], vjerovatnoce[i]))\n",
     "    \n",
     "\n",
-    "    simbol_p_kod = sorted(simbol_p_kod, key=lambda x: x[0]) # po alfabetu radi testova\n",
+    "    simbol_kod_p = sorted(simbol_kod_p, key=lambda x: x[0]) # po alfabetu radi testova\n",
     "\n",
-    "    while len(simbol_p_kod) != 1:\n",
+    "    if len(simbol_kod_p) == 1:\n",
+    "        return [simboli[0]], ['0']\n",
+    "\n",
+    "    while len(simbol_kod_p) != 1:\n",
     "        #sortiranje po vjerovatnocama\n",
-    "        simbol_p_kod = sorted(simbol_p_kod, key=lambda x: x[1], reverse=True)\n",
+    "        simbol_kod_p = sorted(simbol_kod_p, key=lambda x: x[1], reverse=True)\n",
     "\n",
     "        #zadnje dvije liste sa najmanjim vjerovatnocama\n",
-    "        predzadnji = simbol_p_kod[len(simbol_p_kod) - 2]\n",
-    "        zadnji = simbol_p_kod[len(simbol_p_kod) - 1]\n",
+    "        predzadnji = simbol_kod_p[len(simbol_kod_p) - 2]\n",
+    "        zadnji = simbol_kod_p[len(simbol_kod_p) - 1]\n",
     "\n",
     "        #dodavanje na nule i jedinice na kodove simbola\n",
     "        modified_predzadnji = [(kod[0], '0' + kod[1]) for kod in predzadnji[0]]\n",
@@ -138,57 +141,20 @@
     "        spojen_zadnji_predzadnji = (predzadnji[0] + zadnji[0], predzadnji[1] + zadnji[1])\n",
     "\n",
     "        #brisanje zadnjeg i predzadnjeg i dodavanje novog skupa smbola, ovo bi bilo ono podstablo\n",
-    "        del simbol_p_kod[len(simbol_p_kod) - 1]\n",
-    "        del simbol_p_kod[len(simbol_p_kod) - 1]\n",
-    "        simbol_p_kod.append(spojen_zadnji_predzadnji)\n",
+    "        del simbol_kod_p[len(simbol_kod_p) - 1]\n",
+    "        del simbol_kod_p[len(simbol_kod_p) - 1]\n",
+    "        simbol_kod_p.append(spojen_zadnji_predzadnji)\n",
     "\n",
-    "    print(simbol_p_kod)\n",
+    "\n",
+    "    simboli = [pair[0] for pair in simbol_kod_p[0][0]]  \n",
+    "    kodovi = [pair[1] for pair in simbol_kod_p[0][0]]  \n",
     "    \n",
-    "    return [], []\n"
+    "    return simboli, kodovi\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "a9520a72",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Izvorna poruka je:\n",
-      "BBBAAAAAAAABBCDAAA\n",
-      "[([('A', '0'), ('B', '10'), ('C', '110'), ('D', '111')], 1.0)]\n",
-      "\n",
-      "Poruka se sastoji od sljedećih simbola:\n",
-      "\n",
-      "\n",
-      "Skup dobivenih kodnih riječi je:\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "#testing grounds\n",
-    "import math\n",
-    "poruka = \"BBBAAAAAAAABBCDAAA\"\n",
-    "\n",
-    "print(\"Izvorna poruka je:\")\n",
-    "print(poruka)\n",
-    "\n",
-    "(simboli, kodovi) = huffman(poruka)\n",
-    "\n",
-    "print(\"\\nPoruka se sastoji od sljedećih simbola:\")\n",
-    "print(\", \".join(map(str, simboli))) \n",
-    "\n",
-    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
-    "print(\", \".join(map(str, kodovi))) "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "82d0962f",
    "metadata": {},
    "outputs": [],
@@ -202,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6e623fe7",
    "metadata": {},
    "outputs": [],
@@ -238,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "baking-stamp",
    "metadata": {},
    "outputs": [
@@ -296,6 +262,263 @@
     "\n",
     "print(\"\\nKodirana poruka je:\")\n",
     "print(kodirana) \n",
+    "print(\"\\nEntropija poruke je:\")\n",
+    "print(round(entropija(poruka),3))\n",
+    "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
+    "print(round(len(kodirana)/len(poruka),3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "ca020bcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "A\n",
+      "\n",
+      "Poruka se sastoji od sljedecih simbola:\n",
+      "A\n",
+      "\n",
+      "Skup dobivenih kodnih riječi je:\n",
+      "0\n",
+      "\n",
+      "Kod simbola A je 0\n",
+      "\n",
+      "Kodirana poruka je:\n",
+      "0\n",
+      "\n",
+      "Entropija poruke je:\n",
+      "0.0\n",
+      "\n",
+      "Prosječna dužina kodne riječi u poruci je:\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 1\n",
+    "import math\n",
+    "poruka = \"A\"\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi) = huffman(poruka)\n",
+    "\n",
+    "print(\"\\nPoruka se sastoji od sljedecih simbola:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "kodirana = kodiraj(poruka, simboli, kodovi)\n",
+    "\n",
+    "for i in range(len(simboli)):\n",
+    "  print(\"\\nKod simbola \" + simboli[i] + \" je \" + kodovi [i])\n",
+    "\n",
+    "print(\"\\nKodirana poruka je:\")\n",
+    "print(kodirana)\n",
+    "print(\"\\nEntropija poruke je:\")\n",
+    "print(round(entropija(poruka),3))\n",
+    "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
+    "print(round(len(kodirana)/len(poruka),3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b6f7fa9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "DDDDDDDDDDDDDDDDDD\n",
+      "\n",
+      "Poruka se sastoji od sljedecih simbola:\n",
+      "D\n",
+      "\n",
+      "Skup dobivenih kodnih riječi je:\n",
+      "0\n",
+      "\n",
+      "Kod simbola D je 0\n",
+      "\n",
+      "Kodirana poruka je:\n",
+      "000000000000000000\n",
+      "\n",
+      "Entropija poruke je:\n",
+      "0.0\n",
+      "\n",
+      "Prosječna dužina kodne riječi u poruci je:\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 2\n",
+    "\n",
+    "import math\n",
+    "poruka = \"DDDDDDDDDDDDDDDDDD\"\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi) = huffman(poruka)\n",
+    "\n",
+    "print(\"\\nPoruka se sastoji od sljedecih simbola:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "kodirana = kodiraj(poruka, simboli, kodovi)\n",
+    "\n",
+    "for i in range(len(simboli)):\n",
+    "  print(\"\\nKod simbola \" + simboli[i] + \" je \" + kodovi [i])\n",
+    "\n",
+    "print(\"\\nKodirana poruka je:\")\n",
+    "print(kodirana)\n",
+    "print(\"\\nEntropija poruke je:\")\n",
+    "print(round(entropija(poruka),3))\n",
+    "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
+    "print(round(len(kodirana)/len(poruka),3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "b73f7f90",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "ABBBBCDECCCCAAAAAAAAAAAAAA\n",
+      "\n",
+      "Poruka se sastoji od sljedecih simbola:\n",
+      "A, B, D, E, C\n",
+      "\n",
+      "Skup dobivenih kodnih riječi je:\n",
+      "0, 100, 1010, 1011, 11\n",
+      "\n",
+      "Kod simbola A je 0\n",
+      "\n",
+      "Kod simbola B je 100\n",
+      "\n",
+      "Kod simbola D je 1010\n",
+      "\n",
+      "Kod simbola E je 1011\n",
+      "\n",
+      "Kod simbola C je 11\n",
+      "\n",
+      "Kodirana poruka je:\n",
+      "010010010010011101010111111111100000000000000\n",
+      "\n",
+      "Entropija poruke je:\n",
+      "1.692\n",
+      "\n",
+      "Prosječna dužina kodne riječi u poruci je:\n",
+      "1.731\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 3\n",
+    "\n",
+    "import math\n",
+    "poruka = \"ABBBBCDECCCCAAAAAAAAAAAAAA\"\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi) = huffman(poruka)\n",
+    "\n",
+    "print(\"\\nPoruka se sastoji od sljedecih simbola:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "kodirana = kodiraj(poruka, simboli, kodovi)\n",
+    "\n",
+    "for i in range(len(simboli)):\n",
+    "  print(\"\\nKod simbola \" + simboli[i] + \" je \" + kodovi [i])\n",
+    "\n",
+    "print(\"\\nKodirana poruka je:\")\n",
+    "print(kodirana)\n",
+    "print(\"\\nEntropija poruke je:\")\n",
+    "print(round(entropija(poruka),3))\n",
+    "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
+    "print(round(len(kodirana)/len(poruka),3))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9562b5d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Izvorna poruka je:\n",
+      "AAAAAAAAAABBBBBBCCCD\n",
+      "\n",
+      "Poruka se sastoji od sljedecih simbola:\n",
+      "A, B, C, D\n",
+      "\n",
+      "Skup dobivenih kodnih riječi je:\n",
+      "0, 10, 110, 111\n",
+      "\n",
+      "Kod simbola A je 0\n",
+      "\n",
+      "Kod simbola B je 10\n",
+      "\n",
+      "Kod simbola C je 110\n",
+      "\n",
+      "Kod simbola D je 111\n",
+      "\n",
+      "Kodirana poruka je:\n",
+      "0000000000101010101010110110110111\n",
+      "\n",
+      "Entropija poruke je:\n",
+      "1.648\n",
+      "\n",
+      "Prosječna dužina kodne riječi u poruci je:\n",
+      "1.7\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Test 4\n",
+    "\n",
+    "import math\n",
+    "poruka = \"AAAAAAAAAABBBBBBCCCD\"\n",
+    "print(\"Izvorna poruka je:\")\n",
+    "print(poruka)\n",
+    "\n",
+    "(simboli, kodovi) = huffman(poruka)\n",
+    "\n",
+    "print(\"\\nPoruka se sastoji od sljedecih simbola:\")\n",
+    "print(\", \".join(map(str, simboli))) \n",
+    "\n",
+    "print(\"\\nSkup dobivenih kodnih riječi je:\")\n",
+    "print(\", \".join(map(str, kodovi))) \n",
+    "\n",
+    "kodirana = kodiraj(poruka, simboli, kodovi)\n",
+    "\n",
+    "for i in range(len(simboli)):\n",
+    "  print(\"\\nKod simbola \" + simboli[i] + \" je \" + kodovi [i])\n",
+    "\n",
+    "print(\"\\nKodirana poruka je:\")\n",
+    "print(kodirana)\n",
     "print(\"\\nEntropija poruke je:\")\n",
     "print(round(entropija(poruka),3))\n",
     "print(\"\\nProsječna dužina kodne riječi u poruci je:\")\n",
