--- a/MMS_LV03_Huffmanov_algoritam_kodiranja.ipynb
+++ b/MMS_LV03_Huffmanov_algoritam_kodiranja.ipynb
@@ -129,7 +129,7 @@
     "        predzadnji = simbol_kod_p[len(simbol_kod_p) - 2]\n",
     "        zadnji = simbol_kod_p[len(simbol_kod_p) - 1]\n",
     "\n",
-    "        #dodavanje na nule i jedinice na kodove simbola\n",
+    "        #dodavanje nule i jedinice na kodove simbola\n",
     "        modified_predzadnji = [(kod[0], '0' + kod[1]) for kod in predzadnji[0]]\n",
     "        predzadnji = (modified_predzadnji, predzadnji[1])\n",
     "\n",
